--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
       </ul>
     </div>
   </header>
-  <main class="fdirection">
-    <section class="container fdirection justify-content-center justify-content-xl-start" id="sec-about-me" title="About Me">
+  <main class="container-fluid row">
+    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-about-me" title="About Me">
+      <div class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        <h1 class="text-end">About Me</h1>
+      </div>
+      <div class="col-lg-2 col-md-4 col-6 frame my-auto">
+        <img class="d-flex m-auto img-fluid" src="./Assets/images/Ryan headshot.jpg">
+      </div>
+      <div class="d-flex row col-lg-7 col-md-5 col-12">
+        <h2 class="text-center">Ryan Thomas</h2>
+        <p class="lead text-start mb-5">I am a Full-Stack Web Developer proficient in HTML5, CSS, and Javascript. As a former High School English teacher, I am also skilled at public speaking, planning in collaboration with others, and using data to make informed decisions and improve existing processes.</p>
+        <p class="lead text-start">Thank you for checking out my work, and please feel free to reach out with inquiries, suggestions, job offers, or free cake.</p>
+      </div>
     </section>
 
-    <section class="container col-12 px-4 my-5 text-center fdirection" id="sec-work" title="Work">
+    <!-- <section class="container col-12 px-4 my-5 text-center fdirection" id="sec-work" title="Work">
       <div class="col-1 my-auto">
         <h1>Work</h1>
       </div>
@@ -51,7 +62,7 @@
     <section class="container col-12 px-4 my-5 text-center fdirection" title="Contact Me">
       <div class="col-1 my-auto">
         <h1>Contact Me</h1>
-      </div>
+      </div> -->
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
