--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="normalize" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,8 +25,10 @@
     </div>
   </header>
   <main class="container-fluid row">
-    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-about-me" title="About Me">
-      <div class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+    <section class="container-fluid row justify-content-md-start justify-content-center mb-3" id="sec-about-me"
+      title="About Me">
+      <div
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
         <h1 class="text-end">About Me</h1>
       </div>
       <div class="col-lg-2 col-md-4 col-6 frame my-auto">
@@ -34,35 +36,37 @@
       </div>
       <div class="d-flex row col-lg-7 col-md-5 col-12">
         <h2 class="text-center">Ryan Thomas</h2>
-        <p class="lead text-start mb-5">I am a Full-Stack Web Developer proficient in HTML5, CSS, and Javascript. As a former High School English teacher, I am also skilled at public speaking, planning in collaboration with others, and using data to make informed decisions and improve existing processes.</p>
-        <p class="lead text-start">Thank you for checking out my work, and please feel free to reach out with inquiries, suggestions, job offers, or free cake.</p>
+        <p class="lead text-start mb-5">I am a Full-Stack Web Developer proficient in HTML5, CSS, and Javascript. As a
+          former High School English teacher, I am also skilled at public speaking, planning in collaboration with
+          others, and using data to make informed decisions and improve existing processes.</p>
+        <p class="lead text-start">Thank you for checking out my work, and please feel free to reach out with inquiries,
+          suggestions, job offers, or free cake.</p>
       </div>
     </section>
 
-    <!-- <section class="container col-12 px-4 my-5 text-center fdirection" id="sec-work" title="Work">
-      <div class="col-1 my-auto">
-        <h1>Work</h1>
+    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-work" title="Work">
+      <div
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        <h1 class="text-end">Work</h1>
       </div>
-        <div class="col-11 my-auto">
-          <a class="col-12 blueborder lg-proj-container justify-content-center" href="https://stiltskinner.github.io/This-Day-In-History/">
-            <div class="textlinks">This Day in History</div>
-            <img class="col-7" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
+      <div class="d-flex row col-lg-10 col-md-9 col-12 mb-3">
+          <a class="col-12 blueborder dark-back proj-container justify-content-start mx-2 mb-2 text-decoration-none"
+            href="https://stiltskinner.github.io/This-Day-In-History/">
+            <div class="textlinks text-decoration-none px-2">This Day in History</div>
+            <img class="col-12" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
           </a>
-          <a class="col-12 col-lg-6 border-start border-dark" href="https://github.com/Stiltskinner">
-            <div class="textlinks">Weather Dashboard</div>
-            <img class="blueborder" src="" alt="" />
-          </a>
-          <a class="col-12 col-lg-6 border-start border-dark" href="https://github.com/Stiltskinner">
-            <div class="textlinks">Geography Quiz</div>
-            <img class="blueborder" src="" alt="" />
+          <a class="col-6 blueborder dark-back proj-container justify-content-start mx-2  text-decoration-none"
+            href="https://stiltskinner.github.io/https://github.com/Stiltskinner/Weather-Dashboard/">
+            <div class="textlinks text-decoration-none px-2">Weather Dashboard</div>
+            <img class="col-12" src="./Assets/images/Lightning-bolts-strike-from-a-sunset-storm.jpeg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
         </div>
 
     </section>
-    <section class="container col-12 px-4 my-5 text-center fdirection" title="Contact Me">
+    <!-- <section class="container col-12 px-4 my-5 text-center fdirection" title="Contact Me">
       <div class="col-1 my-auto">
         <h1>Contact Me</h1>
-      </div> -->
+      </div> --> -->
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
