--- a/index.html
+++ b/index.html
@@ -49,24 +49,27 @@
         class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
         <h1 class="text-end">Work</h1>
       </div>
-      <div class="d-flex row col-lg-10 col-md-9 col-12 mb-3">
-          <a class="col-12 blueborder dark-back proj-container justify-content-start mx-2 mb-2 text-decoration-none"
-            href="https://stiltskinner.github.io/This-Day-In-History/">
-            <div class="textlinks text-decoration-none px-2">This Day in History</div>
-            <img class="col-12" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
+      <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
+          <a class="col-12 blueborder dark-back lg-proj-container justify-content-center m-2 mb-2 text-decoration-none"
+            href="https://stiltskinner.github.io/This-Day-In-History/" target="_blank">
+            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">This Day in History</div>
+              <img class="col-9 img-fluid mx-auto d-block" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
           </a>
-          <a class="col-6 blueborder dark-back proj-container justify-content-start mx-2  text-decoration-none"
-            href="https://stiltskinner.github.io/https://github.com/Stiltskinner/Weather-Dashboard/">
+          <div class="d-flex col-12 justify-content-start mx-2">
+            <a class="d-flex col-6 blueborder light-back proj-container justify-content-center text-decoration-none me-2"
+            href="https://stiltskinner.github.io/Weather-Dashboard/" target="_blank">
             <div class="textlinks text-decoration-none px-2">Weather Dashboard</div>
-            <img class="col-12" src="./Assets/images/Lightning-bolts-strike-from-a-sunset-storm.jpeg" alt="Stormy sky with lightning striking a dark landscape" />
+            <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
+          <a class="d-flex col-6 blueborder light-back proj-container justify-content-center text-decoration-none"
+            href="https://github.com/Stiltskinner/Weather-Dashboard/" target="_blank">
+            <div class="textlinks text-decoration-none px-2">Weather Dashboard</div>
+            <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
+          </a>
+          </div>
         </div>
 
     </section>
-    <!-- <section class="container col-12 px-4 my-5 text-center fdirection" title="Contact Me">
-      <div class="col-1 my-auto">
-        <h1>Contact Me</h1>
-      </div> --> -->
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
