Project images lined up perfectly

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">This Day in History</div>
               <img class="col-9 img-fluid mx-auto d-block" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
           </a>
-          <div class="d-flex col-12 justify-content-start mx-2">
-            <a class="d-flex col-6 blueborder light-back proj-container justify-content-center text-decoration-none me-2"
+          <div class="d-flex col-12 justify-content-between mx-2">
+            <a class="d-flex col-5 blueborder light-back proj-container float-start justify-content-start text-decoration-none me-2"
             href="https://stiltskinner.github.io/Weather-Dashboard/" target="_blank">
-            <div class="textlinks text-decoration-none px-2">Weather Dashboard</div>
+            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
             <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
-          <a class="d-flex col-6 blueborder light-back proj-container justify-content-center text-decoration-none"
+          <a class="d-flex col-5 blueborder light-back proj-container float-end justify-content-start text-decoration-none"
             href="https://github.com/Stiltskinner/Weather-Dashboard/" target="_blank">
-            <div class="textlinks text-decoration-none px-2">Weather Dashboard</div>
+            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
             <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
           </div>
