Added Contact Me section. Updated all links and resume. Made links open in new tab

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <header class="p-3 mb-3 border-bottom">
     <div class="d-flex flex-wrap align-items-center justify-content-start">
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2">About Me</a></li>
-        <li><a href="#" class="nav-link px-2">Work</a></li>
-        <li><a href="#" class="nav-link px-2">Contact Me</a></li>
-        <li><a href="#" class="nav-link px-2">Resume</a></li>
+        <li><a href="#sec-about-me" class="nav-link px-2">About Me</a></li>
+        <li><a href="#sec-work" class="nav-link px-2">Work</a></li>
+        <li><a href="#sec-contact" class="nav-link px-2">Contact Me</a></li>
+        <li><a class="nav-link px-2" href="./Assets/Ryan Thomas Resume 12_30_21.pdf" download>Resume</a></li>
       </ul>
     </div>
   </header>
@@ -44,7 +44,7 @@
       </div>
     </section>
 
-    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-work" title="Work">
+    <section class="container-fluid row justify-content-md-start justify-content-center mb-3" id="sec-work" title="Work">
       <div
         class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
         <h1 class="text-end">Work</h1>
@@ -59,16 +59,31 @@
             <a class="d-flex col-5 blueborder light-back proj-container float-start justify-content-start text-decoration-none me-2"
             href="https://stiltskinner.github.io/Weather-Dashboard/" target="_blank">
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
-            <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
+            <img class="img-fluid" src="./Assets/images/Weather-Dash-Image.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
           <a class="d-flex col-5 blueborder light-back proj-container float-end justify-content-start text-decoration-none"
-            href="https://github.com/Stiltskinner/Weather-Dashboard/" target="_blank">
-            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
-            <img class="img-fluid" src="https://live.staticflickr.com/3703/19482185625_61b9b975d8_b.jpg" alt="Stormy sky with lightning striking a dark landscape" />
+            href="https://stiltskinner.github.io/Geography-Quiz/" target="_blank">
+            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Geography Quiz</div>
+            <img class="img-fluid" src="./Assets/images/geography-quiz-img.jpg" alt="The earth viewed from space" />
           </a>
           </div>
         </div>
-
+    </section>
+  
+    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-contact" title="Work">
+      <div
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        <h1 class="text-end">Contact Me</h1>
+      </div>
+      <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-start">
+        <div class="d-flex col-12 align-items-center justify-content-start">
+          <ul class="nav col-12 flex-wrap justify-content-between">
+            <li class="col-lg-4 col-12"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="nav-link px-2">Email: ryan.thomas@utexas.edu</a></li>
+            <li class="col-lg-4 col-12"><a href="https://github.com/Stiltskinner" target="_blank" class="nav-link px-2">Github</a></li>
+            <li class="col-lg-4 col-12"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="nav-link px-2">LinkedIn</a></li>
+          </ul>
+        </div>
+        </div>
     </section>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
@@ -77,22 +92,3 @@
 </body>
 
 </html>
-
-<!-- Full About Me I am a Full-Stack Web Developer proficient in HTML5, CSS, and Javascript. As a former High School English teacher, I am also skilled at public speaking, planning in collaboration with others, and using data to make informed decisions and improve existing processes. My years of experience teaching advanced writing has also given me a keen eye for detail. My Masters in Curriculum and Instruction gives me a strong foundation in learning psychology, which I use not only to help others learn, but also to identify gaps in my own knowledge and seek out information to fill those gaps efficiently. -->
-
-<!-- <section class="container col-12 px-4 my-5 text-center justify-content-xl-start justify-content-center fdirection" id="sec-about-me" title="About Me">
-  <div class="col-xxl-1 col-lg-2 col-md-3 col-12 border-dgray">
-    <h1 class="col-12 mx-auto">About Me</h1>
-  </div>
-    <h1 class="col-xl-2 col-12 row align-items-center justify-content-end border-dgray">About Me</h1>
-  <div class="col-xl-2 col-12 frame headshot justify-content-xl-start justify-content-center align-items-center mx-5 my-auto"><img class="d-block m-auto img-fluid" src="./Assets/images/Ryan headshot.jpg"
-      alt="Photo of Ryan Thomas"></div>
-  <div class="col-xl-7 col-lg-6 col-12">
-    <h1 class="fw-bold">Ryan Thomas</h1>
-    <div class="mx-3 align-items-center d-inline-block">
-      <p class="lead text-start mb-5">I am a Full-Stack Web Developer proficient in HTML5, CSS, and Javascript. As a former High School English teacher, I am also skilled at public speaking, planning in collaboration with others, and using data to make informed decisions and improve existing processes.</p>
-      <p class="lead text-start">Thank you for checking out my work, and please feel free to reach out with inquiries, suggestions, job offers, or free cake.</p>
-    </div>
-    </div>
-  </div>
-</section> -->
