--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="p-3 mb-3 border-bottom">
     <div class="d-flex flex-wrap align-items-center justify-content-start">
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center">
         <li><a href="#sec-about-me" class="nav-link px-2">About Me</a></li>
         <li><a href="#sec-work" class="nav-link px-2">Work</a></li>
         <li><a href="#sec-contact" class="nav-link px-2">Contact Me</a></li>
@@ -28,7 +28,7 @@
     <section class="container-fluid row justify-content-md-start justify-content-center mb-3" id="sec-about-me"
       title="About Me">
       <div
-        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-egg">
         <h1 class="text-end">About Me</h1>
       </div>
       <div class="col-lg-2 col-md-4 col-6 frame my-auto">
@@ -46,11 +46,11 @@
 
     <section class="container-fluid row justify-content-md-start justify-content-center mb-3" id="sec-work" title="Work">
       <div
-        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-egg">
         <h1 class="text-end">Work</h1>
       </div>
       <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
-          <a class="col-12 blueborder dark-back lg-proj-container justify-content-center m-2 mb-2 text-decoration-none"
+          <a class="col-12 blueborder light-back lg-proj-container justify-content-center m-2 mb-2 text-decoration-none"
             href="https://stiltskinner.github.io/This-Day-In-History/" target="_blank">
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">This Day in History</div>
               <img class="col-9 img-fluid mx-auto d-block" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
@@ -72,15 +72,15 @@
   
     <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-contact" title="Work">
       <div
-        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-dgray">
+        class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-egg">
         <h1 class="text-end">Contact Me</h1>
       </div>
       <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-start">
         <div class="d-flex col-12 align-items-center justify-content-start">
           <ul class="nav col-12 flex-wrap justify-content-between">
-            <li class="col-lg-4 col-12"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="nav-link px-2">Email: ryan.thomas@utexas.edu</a></li>
-            <li class="col-lg-4 col-12"><a href="https://github.com/Stiltskinner" target="_blank" class="nav-link px-2">Github</a></li>
-            <li class="col-lg-4 col-12"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="nav-link px-2">LinkedIn</a></li>
+            <li class="col-lg-4 col-12"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">Email: ryan.thomas@utexas.edu</a></li>
+            <li class="col-lg-4 col-12"><a href="https://github.com/Stiltskinner" target="_blank" class="contact-link px-2">Github</a></li>
+            <li class="col-lg-4 col-12"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="contact-link px-2">LinkedIn</a></li>
           </ul>
         </div>
         </div>
