--- a/index.html
+++ b/index.html
@@ -55,17 +55,27 @@
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">This Day in History</div>
               <img class="col-9 img-fluid mx-auto d-block" src="./Assets/images/onthisday_black.png" alt="This Day in History Logo" />
           </a>
-          <div class="d-flex col-12 justify-content-between mx-2">
-            <a class="d-flex col-5 blueborder light-back proj-container float-start justify-content-start text-decoration-none me-2"
+          <div class="d-flex col-12 justify-content-between mx-2 mb-3">
+            <a class="d-flex col-5 blueborder light-back proj-container float-start justify-content-md-start text-decoration-none me-2"
             href="https://stiltskinner.github.io/Weather-Dashboard/" target="_blank">
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
             <img class="img-fluid" src="./Assets/images/Weather-Dash-Image.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
-          <a class="d-flex col-5 blueborder light-back proj-container float-end justify-content-start text-decoration-none"
+          <a class="d-flex col-5 blueborder light-back proj-container float-end justify-content-md-start text-decoration-none"
             href="https://stiltskinner.github.io/Geography-Quiz/" target="_blank">
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Geography Quiz</div>
             <img class="img-fluid" src="./Assets/images/geography-quiz-img.jpg" alt="The earth viewed from space" />
           </a>
+          </div>
+          <div class="dropdown d-flex col-12 justify-content-center">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              Github Repositories
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="https://github.com/Stiltskinner/This-Day-In-History" target="_blank">This Day In History</a></li>
+              <li><a class="dropdown-item" href="https://github.com/Stiltskinner/Weather-Dashboard" target="_blank">Weather Dashboard</a></li>
+              <li><a class="dropdown-item" href="https://github.com/Stiltskinner/Geography-Quiz" target="_blank">Geography Quiz</a></li>
+            </ul>
           </div>
         </div>
     </section>
@@ -75,18 +85,19 @@
         class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-egg">
         <h1 class="text-end">Contact Me</h1>
       </div>
-      <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-start">
-        <div class="d-flex col-12 align-items-center justify-content-start">
-          <ul class="nav col-12 flex-wrap justify-content-between">
-            <li class="col-lg-4 col-12"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">Email: ryan.thomas@utexas.edu</a></li>
-            <li class="col-lg-4 col-12"><a href="https://github.com/Stiltskinner" target="_blank" class="contact-link px-2">Github</a></li>
-            <li class="col-lg-4 col-12"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="contact-link px-2">LinkedIn</a></li>
+      <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
+        <div class="d-flex col-12 align-items-center justify-content-center">
+          <ul class="nav col-12 flex-wrap justify-content-center">
+            <li class="col-lg-3 col-12 mx-auto"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">Email: ryan.thomas@utexas.edu</a></li>
+            <li class="col-lg-3 col-12 mx-auto"><a href="https://github.com/Stiltskinner" target="_blank" class="contact-link px-2">Github</a></li>
+            <li class="col-lg-3 col-12 mx-auto"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="contact-link px-2">LinkedIn</a></li>
           </ul>
         </div>
         </div>
     </section>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
   <script src="./Assets/js/script.js"></script>
 </body>
