Made some small adjustments to boostrap classes for smaller projects so the text fits inside the container more nicely

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
           <div class="d-flex col-12 justify-content-between mx-2 mb-3">
             <a class="d-flex col-5 blueborder light-back proj-container float-start justify-content-md-start text-decoration-none me-2"
             href="https://stiltskinner.github.io/Weather-Dashboard/" target="_blank">
-            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Weather Dashboard</div>
+            <div class="textlinks text-decoration-none justify-content-center ms-md-2 ms-1 px-md-2 px-0 py-1">Weather Dashboard</div>
             <img class="img-fluid" src="./Assets/images/Weather-Dash-Image.jpg" alt="Stormy sky with lightning striking a dark landscape" />
           </a>
           <a class="d-flex col-5 blueborder light-back proj-container float-end justify-content-md-start text-decoration-none"
             href="https://stiltskinner.github.io/Geography-Quiz/" target="_blank">
-            <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Geography Quiz</div>
+            <div class="textlinks text-decoration-none justify-content-center ms-md-2 ms-1 px-md-2 px-0 py-1">Geography Quiz</div>
             <img class="img-fluid" src="./Assets/images/geography-quiz-img.jpg" alt="The earth viewed from space" />
           </a>
           </div>
@@ -86,9 +86,9 @@
         <h1 class="text-end">Contact Me</h1>
       </div>
       <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
-        <div class="d-flex col-12 align-items-center justify-content-center" id="container-contact">
+        <div class="d-flex col-12 align-items-center justify-content-center">
           <ul class="nav col-12 flex-wrap justify-content-center">
-            <li class="col-lg-3 col-12 mx-auto"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">ryan.thomas@utexas.edu</a></li>
+            <li class="col-lg-3 col-12 mx-auto"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">Email: ryan.thomas@utexas.edu</a></li>
             <li class="col-lg-3 col-12 mx-auto"><a href="https://github.com/Stiltskinner" target="_blank" class="contact-link px-2">Github</a></li>
             <li class="col-lg-3 col-12 mx-auto"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="contact-link px-2">LinkedIn</a></li>
           </ul>
