--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       </div>
       <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
         <div class="d-flex col-12 align-items-center justify-content-center">
-          <ul class="nav col-12 flex-wrap justify-content-center">
-            <li class="col-lg-3 col-12 mx-auto"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">Email: ryan.thomas@utexas.edu</a></li>
+          <ul class="nav col-12 flex-wrap text-md-start text-center justify-content-center">
+            <li class="col-lg-3 col-12 mx-auto"><a href="mailto:ryan.thomas@utexas.edu" target="_blank" class="contact-link px-2">ryan.thomas@utexas.edu</a></li>
             <li class="col-lg-3 col-12 mx-auto"><a href="https://github.com/Stiltskinner" target="_blank" class="contact-link px-2">Github</a></li>
             <li class="col-lg-3 col-12 mx-auto"><a href="https://www.linkedin.com/in/ryanpaxthomas/" target="_blank" class="contact-link px-2">LinkedIn</a></li>
           </ul>
