--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <h1 class="text-end">Work</h1>
       </div>
       <div class="d-flex flex-wrap col-lg-10 col-md-9 col-12 mb-3 justify-content-center">
+        <a class="col-12 blueborder light-back lg-proj-container justify-content-center m-2 mb-2 text-decoration-none"
+        href="https://infinite-falls-27891.herokuapp.com/" target="_blank">
+        <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">Pig E-Bank</div>
+          <img class="col-9 img-fluid mx-auto d-block" src="./Assets/images/pig logo.png" alt="Pig E-Bank Logo" />
+      </a>
           <a class="col-12 blueborder light-back lg-proj-container justify-content-center m-2 mb-2 text-decoration-none"
             href="https://stiltskinner.github.io/This-Day-In-History/" target="_blank">
             <div class="textlinks text-decoration-none justify-content-center ms-2 px-2 py-1">This Day in History</div>
@@ -72,6 +77,7 @@
               Github Repositories
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="https://github.com/Stiltskinner/Pig-E-Bank" target="_blank">Pig E-Bank</a></li>
               <li><a class="dropdown-item" href="https://github.com/Stiltskinner/This-Day-In-History" target="_blank">This Day In History</a></li>
               <li><a class="dropdown-item" href="https://github.com/Stiltskinner/Weather-Dashboard" target="_blank">Weather Dashboard</a></li>
               <li><a class="dropdown-item" href="https://github.com/Stiltskinner/Geography-Quiz" target="_blank">Geography Quiz</a></li>
@@ -80,7 +86,7 @@
         </div>
     </section>
   
-    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-contact" title="Work">
+    <section class="container-fluid row justify-content-md-start justify-content-center" id="sec-contact" title="Contact-Me">
       <div
         class="d-flex col-lg-2 col-md-3 col-12 align-items-center justify-content-md-end justify-content-center border-egg">
         <h1 class="text-end">Contact Me</h1>
