Updated profile picture

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 class="text-end">About Me</h1>
       </div>
       <div class="col-lg-2 col-md-4 col-6 frame my-auto">
-        <img class="d-flex m-auto img-fluid" src="./Assets/images/Ryan headshot.jpg">
+        <img class="d-flex m-auto img-fluid" src="./Assets/images/Ryan profile pic.jpg">
       </div>
       <div class="d-flex row col-lg-7 col-md-5 col-12">
         <h2 class="text-center">Ryan Thomas</h2>
